--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-        WELCOME TO MY GITHUB PAGE
+        <h1>WELCOME TO MY GITHUB PAGE</h1>
     </body>
 </html> 
